2012-10-01  Ethan A Merritt  <merritt@u.washington.edu>

	* src/gplt_x11.c:  Replace parsing using sscanf( "%d %d" ) with
	two calls to strtol().  This yields a 2-fold speedup in benchmarks
	with large numbers of points and vectors.

2012-09-28  Dima Kogan  <gnuplot@dima.secretsauce.net>

	* src/gplt_x11.c src/gplt_x11.h:  Remove dead code.

	* src/gplt_x11.c term/x11.trm:  Modify format statements used to send
	commands from x11.trm to gnuplot_x11.  Before most integers were sent
	using "%04d", now " %d".  This prevents overflow for coordinate > 9999.
	The extra byte required for a 4-digit coordinate is compensated by 
	fewer bytes needed for small integers like linetype.

	* src/gplt_x11.c src/gplt_x11.h:  Adjust point size to accommodate
	changes in window size.

2012-09-26  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c src/util.c (streq) src/util.h:  New utility function
	streq(char *a, char *b) returns TRUE if a and b are identical save for
	leading and trailing whitespace.  Use this for matching requested string
	labels in a using spec to the actual column header text in a data file.
	Bug #3571243

2012-09-25  Dima Kogan  <gnuplot@dima.secretsauce.net>

	* src/gplt_x11.c src/mouse.c (do_event) term/x11.trm:
	Feed back the x11 window size from gnuplot_x11 to gnuplot so that
	the coordinates can be rescaled to maintain the correct aspect ratio.
	This allows correct functioning of command like 'set size square' and
	'set view equal xyz' in an interactive x11 output window.

2012-09-24  Ethan A Merritt  <merritt@u.washington.edu>

	* demo/molecule.dem demo/datastrings.dem:  Remove old labelplot demo
	because it failed to show properly scaled xyz;  instead add equal xyz
	to molecule demo.

	* src/graphics.c docs/plotstyles.gnu:  Fix bug preventing explicit
	assignment of color sequence in stacked histograms.

2012-09-21  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/Makefile.am lisp/Makefile.am lisp/configure.in: